--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -3,8 +3,9 @@
 /* font-family: 'Hanken Grotesk', sans-serif; */
 
 @media only screen and (orientation: landscape) {
-  body {
+  html, body {
     max-width: 1440px;
+    height: 100%;
     font-family: "Hanken Grotesk", sans-serif;
     margin: 0 auto;
     display: flex;
